Fixed: Lady of the lake not showing up when a game finishes.

--- a/assets/stylesheets/lobby.css
+++ b/assets/stylesheets/lobby.css
@@ -1038,3 +1038,9 @@ i {
     transform: translateX(-50%);
 }
 
+
+
+/* .dark .nav-tabs  {
+    background-color: #579157;
+    border-radius: 5px;
+} */
